Added Mantine UI & its dependencies

--- a/Sentrii/src/manifest.json
+++ b/Sentrii/src/manifest.json
@@ -3,8 +3,13 @@
   "name": "Smart Contract Scanner",
   "version": "1.0",
   "description": "Scan Smart Contract Addresses",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "storage", "scripting"],
   "action": {
-    "default_popup": "index.html"
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "16x16.png",
+      "48": "48x48.png",
+      "128": "128x128.png"
+    }
   }
 }
