Final draft of the warning pop up box

--- a/Sentrii/src/manifest.json
+++ b/Sentrii/src/manifest.json
@@ -19,6 +19,12 @@
       "js": ["urlCheck.js"]
     }
   ],
+  "web_accessible_resources": [
+    {
+      "resources": ["128x128.png"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "background": {
     "service_worker": "background.js"
   }
