--- a/sentryscanner/package.json
+++ b/sentryscanner/package.json
@@ -4,11 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "copyAll": "cp src/manifest.json dist/ && cp src/assets/* dist/ && cp src/urlCheck.js dist/ && cp src/background.js dist/",
-    "build": "vite build && npm run copyAll",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "parcel src/Popup.jsx",
+    "build": "parcel build src/popup.jsx src/background.js src/urlCheck.js --dist-dir dist && node copy-manifest.cjs",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@mantine/core": "^7.1.7",
@@ -18,15 +16,14 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
     "cpy-cli": "^5.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "parcel": "^2.10.3",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
-    "postcss-simple-vars": "^7.0.1",
-    "vite": "^4.4.5"
+    "postcss-simple-vars": "^7.0.1"
   }
 }
