--- a/sentryscanner/src/manifest.json
+++ b/sentryscanner/src/manifest.json
@@ -11,12 +11,12 @@
   "permissions": ["tabs", "activeTab", "storage", "scripting"],
   "host_permissions": ["http://*/*", "https://*/*"],
   "action": {
-    "default_popup": "index.html",
+    "default_popup": "default_popup.html",
     "default_icon": {
       "16": "assets/16x16.png",
       "48": "assets/48x48.png",
       "128": "assets/128x128.png"
-    }  
+    }
   },
   "content_scripts": [
     {
