--- a/sentryscanner/src/manifest.json
+++ b/sentryscanner/src/manifest.json
@@ -26,7 +26,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["128x128.png"],
+      "resources": ["assets/128x128.png", "AlertBox.js"],
       "matches": ["<all_urls>"]
     }
   ],
